--- a/ui/static/css/style.css
+++ b/ui/static/css/style.css
@@ -12,3 +12,13 @@ h1, h2 {
   list-style-type: none;
   padding: 0;
 }
+
+.view-item {
+  padding: 0.5rem 0;
+}
+
+.view-label {
+  font-weight: bold;
+  display: inline-block;
+  width: 150px;
+}
