--- a/ui/templates/data/horseList.html
+++ b/ui/templates/data/horseList.html
@@ -24,7 +24,7 @@
             <th scope="col">Gender</th>
             <th scope="col">Breed</th>
             <th scope="col">Color</th>
-            <th scope="col">Edit</th>
+            <th scope="col">Operations</th>
           </tr>
         </thead>
 
@@ -38,7 +38,8 @@
               <td>{% breed horse.breed %}</td>
               <td>{% color horse.color %}</td>
               <td>
-                <a href="/horse/{{ horse.id }}" class="btn btn-success btn-sm" role="button">Edit <i class="far fa-edit"></i></a>
+                <a href="/horse/{{ horse.id }}" class="btn btn-dark btn-sm">View <i class="fas fa-search"></i></a>
+                <a href="/horse/{{ horse.id }}?edit=true" class="btn btn-success btn-sm" role="button">Edit <i class="far fa-edit"></i></a>
               </td>
             </tr>
           {% empty %}
